Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109076

WebAssembly - QML - Text - Using Thai characters is causing a crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5
    • 6.4.1
    • GUI: Text handling
    • None
    • WebAssembly
    • 490c4558f (dev), 561b48c76 (6.5)

    Description

      When any thai characters are being used in a QML Text object as text, the application is crashing and the following error is printed into the Javascript console : 
      "
      VM221:1 Uncaught RuntimeError: Aborted(To use dlopen, you need to use Emscripten's linking support, see https://github.com/emscripten-core/emscripten/wiki/Linking). Build with -s ASSERTIONS=1 for more info.
      at ye (eval at completeLoadEmscriptenModule (qtloader.js:1:5259), <anonymous>:1:5701)
      at ua (eval at completeLoadEmscriptenModule (qtloader.js:1:5259), <anonymous>:1:116703)
      "

      To reproduce the issue, just simply build and run the attached project for WebAssembly (I used Qt 6.4.1) : 
      WebAssemblyThaiCharactersCrash.zip

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-109076
          # Subject Branch Project Status CR V

          Activity

            People

              sorvig Morten Sørvig
              csnt Csaba Szigeti
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes